# polite-c

./: .gitignore  Cargo.toml  README.md  example.c  shell.nix
.github/workflows/: main.yml
src/: borrowck.rs  cfg.rs  cli.rs  diagnostics.rs  main.rs
test_c_project/: Makefile  example.c
