[package]
name = "polite-c"
version = "0.1.0"
authors = ["Ana Gelez <ana@gelez.xyz>", "Edgar Onghena <dev@edgar.bzh>"]
edition = "2018"

[features]
dot = [ ]

[dependencies]
clap = "3.0.0-beta.2"
clang = { version = "1.0", features = ["clang_10_0"] }
lazy_static = "1.4"
make-u-move = { git = "https://github.com/WartaPoirier-corp/make-u-move", rev = "8f1077be7f2c8de062c906e863259f55a8ca7432" }
petgraph = "0.5"

[package.metadata.deb]
depends = "libclang1-10, libffi-dev, libbsd0"
